# ev-decafs-serve

./: .dockerignore  .gitignore  LICENSE  README.md  locustfile.py  pyproject.toml
.github/workflows/: ci.yaml
configs/: bootstrap.yaml  macro.yaml  oilwell.yaml  welllog.yaml
docker/: Dockerfile  compose.yaml  entrypoint.sh
examples/: macro.json  welllog.json
scripts/: bootstrap.py  evaluate.py  make_drift_report.py  promote_model.py  train.py
src/evdecafs_serve/: config.py
src/evdecafs_serve/data/: datasets.py  loader.py
src/evdecafs_serve/features/: ar1.py  evt.py  extract.py
src/evdecafs_serve/models/: bundle.py  decafs.py  fpnn.py  inference.py  registry.py
src/evdecafs_serve/monitoring/: drift.py  features.py
src/evdecafs_serve/serving/: app.py  schemas.py
src/evdecafs_serve/training/: bocpd.py  evaluate.py  labelling.py  pipeline.py  smote.py
src/evdecafs_serve/utils/: logging.py
tests/data/: welllog_fixture.csv  welllog_fixture_meta.json
tests/integration/: conftest.py  test_model_registry_roundtrip.py  test_pipeline_smoke.py  test_serving_api.py
tests/unit/: conftest.py  test_ar1.py  test_decafs.py  test_drift.py  test_evt.py  test_extract.py  test_fpnn.py  test_loader.py  test_properties.py
