[project]
name = "evdecafs-serve"
version = "0.1.0"
description = "Production MLOps envelope around EV-DeCAFS: two-phase changepoint detection and classification for noisy, autocorrelated time series."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "tqdm>=4.65",
  "fredapi>=0.5.0",
  "mlflow>=2.14",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "evidently>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.0",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evdecafs_serve"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src/evdecafs_serve/serving"]
ignore_missing_imports = true
